--- a/CourtApp.Web/Areas/Litigation/Views/CaseWork/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseWork/_ViewAll.cshtml
@@ -34,6 +34,7 @@
                                         <tr>
                                             <td>
                                                 <input asp-for="@Model.PendingWork[i].Works[j].Id" type="hidden" />
+                                                <input asp-for="@Model.PendingWork[i].Works[j].WorkId" type="hidden" />
                                                 <input asp-for="@Model.PendingWork[i].Works[j].Work" type="hidden" />
                                                 @Model.PendingWork[i].Works[j].Work
                                             </td>
