--- a/CourtApp.Web/Areas/Client/Views/ManageClient/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/Client/Views/ManageClient/_CreateOrEdit.cshtml
@@ -72,7 +72,7 @@
             <div class="form-group row">
                 <label class="col-md-2 col-form-label">Referal By</label>
                 <div class="col-md-4">
-                    <input type="text" placeholder="Please referals name" asp-for="ReferalBy" class="form-control" />                    
+                    <input type="text" placeholder="Please referals name" asp-for="ReferalBy" class="form-control" />
                 </div>
                 <label class="col-md-2 col-form-label">Appearance</label>
                 <div class="col-md-4">
@@ -121,23 +121,21 @@
         <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
     </div>
 </form>
-@section Scripts
-{
-    <script>
-        $("#OppositCounselId").select2({
-            placeholder: "Select a opposit councel",
-            theme: "bootstrap4",
-            escapeMarkup: function (m) {
-                return m;
-            }
-        });
-        $("#AppearenceID").select2({
-            placeholder: "Select a appearance",
-            theme: "bootstrap4",
-            escapeMarkup: function (m) {
-                return m;
-            }
-        });
-    </script>
 
-}
+<script type="text/javascript" language=javascript>
+    $("#OppositCounselId").select2({
+        placeholder: "Select a opposit councel",
+        theme: "bootstrap4",
+        escapeMarkup: function (m) {
+            return m;
+        }
+    });
+    $("#AppearenceID").select2({
+        placeholder: "Select a appearance",
+        theme: "bootstrap4",
+        escapeMarkup: function (m) {
+            return m;
+        }
+    });
+</script>
+
