--- a/CourtApp.Web/Areas/Litigation/Views/CaseWork/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseWork/_CreateOrEdit.cshtml
@@ -1,5 +1,5 @@
-﻿@model CaseWorkingViewModel
-<form id="create-form" method="post" method="post" asp-controller="CaseWork" asp-action="OnPostCreateOrEdit" asp-route-Id="@Model.CaseId" enctype="multipart/form-data">
+﻿@* @model CaseWorkingViewModel
+<form id="create-form" method="post" method="post" asp-controller="CaseWork" asp-action="OnPostCreateOrEdit" asp-route-Id="" enctype="multipart/form-data">
     <div class="row">
         <div class="col-md-12">
             <div class="form-group row">
@@ -34,14 +34,14 @@
                 </div>
             </div>
 
-            <div class="form-group row">
+            @* <div class="form-group row">
                 <label class="col-md-3 col-form-label">@localizer["Remark"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
                         <input type="text" placeholder="Please enter remark if any" asp-for="Remark" id="Remark" class="form-control" />
                     </div>
                 </div>
-            </div>
+            </div> 
 
             <div class="form-group row">
                 <div class="col-md-3">
@@ -80,3 +80,4 @@
         });
     });   
 </script>
+ *@
