--- a/CourtApp.Web/Areas/Litigation/Views/Hearing/_AssignWork.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/Hearing/_AssignWork.cshtml
@@ -2,8 +2,8 @@
 <form id="create-form" method="post" asp-controller="hearing" asp-action="OnPostAssignWork"  enctype="multipart/form-data">
     <div class="row">
         <div class="col-md-12">
-            <input type="hidden" asp-for="CaseId" />
-            <div class="form-group row">
+            @* <input type="hidden" asp-for="CaseId" /> *@
+         @*    <div class="form-group row">
                 <label class="col-md-3 col-form-label">@localizer["Work Type"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
@@ -34,15 +34,15 @@
                     </div>
                 </div>
             </div>
-
-            <div class="form-group row">
+ *@
+           @*  <div class="form-group row">
                 <label class="col-md-3 col-form-label">@localizer["Remark"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
                         <input type="text" placeholder="Please enter remark if any" asp-for="Remark" id="Remark" class="form-control" />
                     </div>
                 </div>
-            </div>
+            </div> *@
 
             <div class="form-group row">
                 <div class="col-md-12">
@@ -51,11 +51,11 @@
         </div>
     </div>
 
-    <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
+    @* <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
         <button type="submit" class="btn btn-success">Save</button>
-        @* <button id="btnSubmit" type="button" class="btn btn-success">Save</button> *@
+        @* <button id="btnSubmit" type="button" class="btn btn-success">Save</button> 
         <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
-    </div>
+    </div> *@
 </form>
 <script type="text/javascript" language="javascript">
 
