--- a/CourtApp.Web/Areas/Litigation/Views/Hearing/_CaseProceeding.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/Hearing/_CaseProceeding.cshtml
@@ -20,12 +20,17 @@
 
 @model CaseProceedingViewModel
 <form id="create-form" method="post" asp-controller="hearing" asp-action="OnPostCaseProceeding" enctype="multipart/form-data">
-    <div class="row">
+    <div class="col-md-12">
+        <div class="form-group row">
+            <label class="col-md-2 col-form-label">@localizer["Proceeding Date"]</label>
+            <label class="col-md-10 col-form-label">@Model.ProceedingDate</label>
+            @* <label class="col-md-10 col-form-label">@Model.ProceedingDate.Substring(0, @Model.ProceedingDate.IndexOf(' '))</label> *@
+        </div>
         <fieldset class="scheduler-border">
             <legend class="scheduler-border"><strong>Case Proceeding</strong></legend>
             <div class="col-md-12">
                 <input type="hidden" asp-for="CaseId" />
-                <input type="hidden" asp-for="IsUpdate"/>
+                <input type="hidden" asp-for="IsUpdate" />
                 <div class="form-group row">
                     <label class="col-md-2 col-form-label">@localizer["Proceeding Type"]</label>
                     <div class="col-md-4">
@@ -59,57 +64,94 @@
                     <label class="col-md-2 col-form-label">@localizer["Next Date"]</label>
                     <div class="col-md-4">
                         <div class="input-group">
-                            <input type="date" id="NextDate" asp-for="NextDate"  class="form-control">
+                            <input type="date" id="NextDate" asp-for="NextDate" class="form-control">
                         </div>
                     </div>
                 </div>
             </div>
         </fieldset>
-    </div>
-    <div class="row">
-        <fieldset class="scheduler-border">
-            <legend class="scheduler-border"><strong>Case Proceeding Work Detail</strong></legend>
-            <div class="col-md-12">
 
-                <div class="form-group row">
-                    <label class="col-md-2 col-form-label">@localizer["Work Type"]</label>
-                    <div class="col-md-4">
-                        <div class="input-group">
-                            <select class="form-control select2bs4" id="WorkTypeId"
-                                    asp-for="@Model.ProcWork.Workdt[0].WorkTypeId"
-                                    asp-items="@Model.ProcWork.WorkTypes">
-                                <option></option>
-                            </select>
-                        </div>
+        <div class="row">
+            <fieldset class="scheduler-border">
+                <legend class="scheduler-border"><strong>Case Proceeding Work Detail</strong></legend>
+                <div class="col-md-12">
+                    <div class="form-group row">
+                        <button type="button" id="btnAddMore" class="btn btn-success">Add More...</button>
                     </div>
-                    <label class="col-md-2 col-form-label">@localizer["Work"]</label>
-                    <div class="col-md-4">
-                        <div class="input-group">
-                            <select class="form-control select2bs4" id="WorkId"
-                                    asp-for="@Model.ProcWork.Workdt[0].WorkId"
-                                    asp-items="@Model.ProcWork.Works">
-                                <option></option>
-                            </select>
+                    @*@if (@Model.ProcWork != null)
+                     {
+                        @for (int i = 0; i < @Model.ProcWork.Workdt.Count; i++)
+                        {
+                            <div id="workRows">
+                                <div class="form-group row workRow" id="workRow_" @i>
+                                    <label class="col-md-2 col-form-label">@localizer["Work Type"]</label>
+                                    <div class="col-md-4">
+                                        <div class="input-group">
+                                            <select class="form-control select2bs4" id="WorkTypeId_" @i
+                                                    asp-for="@Model.ProcWork.Workdt[@i].WorkTypeId"
+                                                    asp-items="@Model.ProcWork.WorkTypes">
+                                                <option></option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <label class="col-md-2 col-form-label">@localizer["Work"]</label>
+                                    <div class="col-md-4">
+                                        <div class="input-group">
+                                            <select class="form-control select2bs4" id="WorkId_" @i
+                                                    asp-for="@Model.ProcWork.Workdt[@i].WorkId"
+                                                    asp-items="@Model.ProcWork.Works">
+                                                <option></option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                    }
+                    else
+                    { *@
+                        <div id="workRows">
+                            <div class="form-group row workRow" id="workRow_0">
+                                <label class="col-md-2 col-form-label">@localizer["Work Type"]</label>
+                                <div class="col-md-4">
+                                    <div class="input-group">
+                                        <select class="form-control select2bs4" id="WorkTypeId_0"
+                                                asp-for="@Model.ProcWork.Workdt[0].WorkTypeId"
+                                                asp-items="@Model.ProcWork.WorkTypes">
+                                            <option></option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <label class="col-md-2 col-form-label">@localizer["Work"]</label>
+                                <div class="col-md-4">
+                                    <div class="input-group">
+                                        <select class="form-control select2bs4" id="WorkId_0"
+                                                asp-for="@Model.ProcWork.Workdt[0].WorkId"
+                                                asp-items="@Model.ProcWork.Works">
+                                            <option></option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                   @*  } *@
+                    <div class="form-group row">
+                        <label class="col-md-2 col-form-label">@localizer["Working Date"]</label>
+                        <div class="col-md-4">
+                            <div class="input-group">
+                                <input type="date" asp-for="@Model.ProcWork.WorkingDate"
+                                       class="form-control">
+                            </div>
                         </div>
                     </div>
                 </div>
+            </fieldset>
+        </div>
 
-                <div class="form-group row">
-                    <label class="col-md-2 col-form-label">@localizer["Working Date"]</label>
-                    <div class="col-md-4">
-                        <div class="input-group">
-                            <input type="date" asp-for="@Model.ProcWork.WorkingDate"                                  
-                                    class="form-control">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </fieldset>
-    </div>
-
-    <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
-        <button type="submit" class="btn btn-success">Save</button>
-        <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
+        <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
+            <button type="submit" class="btn btn-success">Save</button>
+            <button type="submit" class="btn btn-default close-button" data-dismiss="modal">Cancel</button>
+        </div>
     </div>
 </form>
 <script type="text/javascript" language=javascript>
@@ -142,14 +184,14 @@
             });
         });
     });
-    $("#WorkTypeId").select2({
+    $("#WorkTypeId_0").select2({
         placeholder: "Select a work type",
         theme: "bootstrap4",
         escapeMarkup: function (m) {
             return m;
         }
     });
-    $("#WorkId").select2({
+    $("#WorkId_0").select2({
         placeholder: "Select a work",
         theme: "bootstrap4",
         escapeMarkup: function (m) {
@@ -157,13 +199,76 @@
         }
     });
 
-    $("#WorkTypeId").on("change", function () {
-        $("#WorkId").empty();
-        $.getJSON("/Litigation/CaseWork/DdlSubWorks?WorkId=" + $("#WorkTypeId").val(), function (data) {
+    $("#WorkTypeId_0").on("change", function () {
+        $("#WorkId_0").empty();
+        $.getJSON("/Litigation/CaseWork/DdlSubWorks?WorkId=" + $("#WorkTypeId_0").val(), function (data) {
             $.each(data.Data, function (i, item) {
-                $("#WorkId").append(`<option value="${item.Id}">${item.Name_En}</option>`);
+                $("#WorkId_0").append(`<option value="${item.Id}">${item.Name_En}</option>`);
             });
         });
+    });
+    var rowCount = 1;
+    $("#btnAddMore").on("click", function () {
+        var newRow = $('#workRow_0').clone();
+        newRow.attr('id', 'workRow_' + rowCount);
+
+        newRow.find('select#WorkTypeId_0')
+            .attr('id', 'WorkTypeId_' + rowCount)
+            .attr('name', "ProcWork.Workdt[" + rowCount + "].WorkTypeId")
+            .val('')
+            .removeClass('select2-hidden-accessible');
+
+        newRow.find('select#WorkId_0')
+            .attr('id', 'WorkId_' + rowCount)
+            .attr('name', "ProcWork.Workdt[" + rowCount + "].WorkId")
+            .val('')
+            .removeClass('select2-hidden-accessible');
+
+        newRow.find('.select2bs4').select2({
+            theme: 'bootstrap4'
+        });
+
+        $('#workRows').append(newRow);
+        rowCount++;
+    });
+    // $('.select2bs4').select2({
+    //     theme: 'bootstrap4'
+    // });
+
+    $(document).on('change', '[id^=WorkTypeId_]', function () {
+        var selectedWorkTypeId = $(this).val(); // Get selected WorkTypeId
+        var workIdDropdown = $(this).closest('.workRow').find('[id^=WorkId_]'); // Find associated WorkId dropdown
+
+        if (selectedWorkTypeId) {
+            // Example: Fetch data for WorkId dropdown (replace with actual AJAX call)
+            $.ajax({
+                url: '/Litigation/CaseWork/DdlSubWorks', // Replace with your API endpoint
+                method: 'GET',
+                data: { WorkId: selectedWorkTypeId },
+                success: function (data) {
+                    // Populate the WorkId dropdown
+                    workIdDropdown.empty(); // Clear existing options
+                    workIdDropdown.append('<option value="">Select Work</option>'); // Add placeholder option
+                    $.each(data.Data, function (index, work) {
+                        debugger;
+                        workIdDropdown.append('<option value="' + work.Id + '">' + work.Name_En + '</option>');
+                    });
+
+                    // Reinitialize select2 for the updated dropdown
+                    workIdDropdown.select2({
+                        theme: 'bootstrap4'
+                    });
+                },
+                error: function () {
+                    alert('Failed to load works. Please try again.');
+                }
+            });
+        } else {
+            // Clear WorkId dropdown if no WorkTypeId selected
+            workIdDropdown.empty().append('<option value="">Select Work</option>').select2({
+                theme: 'bootstrap4'
+            });
+        }
     });
 
     // $("#btnSubmit").on("click", function () {
