--- a/CourtApp.Web/Views/Shared/Components/Title/Default.cshtml
+++ b/CourtApp.Web/Views/Shared/Components/Title/Default.cshtml
@@ -7,7 +7,9 @@
     </a>
     <a style="display:none" id="hypRepeatButton" asp-area="Litigation"
        asp-controller="casemanage"
-       asp-action="GetLastUserCase" class="btn btn-outline-success pull-left"
+       asp-action="CreateOrUpdate"
+       asp-route-from="repeat"
+       class="btn btn-outline-success pull-left"
        title="Get Last entered case detail">
         <i class="fa fa-repeat" aria-hidden="true"></i> Repeat
     </a>
