--- a/CourtApp.Web/Areas/LawyerDiary/Views/Title/Index.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/Title/Index.cshtml
@@ -4,7 +4,7 @@
 }
 <div class="card">
     <div class="col-sm-12" style="padding:20px">
-        @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Brands.Create)).Result.Succeeded)
+        @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Titles.Create)).Result.Succeeded)
         {
             <a onclick="jQueryModalGet('/LawyerDiary/Title/OnCreatOrUpdateTitle','Add New Complete Title')" class="btn bg-success">
                 <i class="fa fa-plus-square"></i> Add New Case Title
