--- a/CourtApp.Web/Areas/Report/Views/Register/_OtherRegister.cshtml
+++ b/CourtApp.Web/Areas/Report/Views/Register/_OtherRegister.cshtml
@@ -5,7 +5,7 @@
             <th style="width:5%!important">Sno.</th>
             <th style="width:20%!important">Case Detail</th>
             <th style="width:8%!important">Date</th>
-            <th style="width:10%!important">Work Type</th>            
+           @*  <th style="width:10%!important">Work Type</th>   *@          
             <th style="width:15%!important">Work</th>
             <th style="width:10%!important">Actions</th>
         </tr>
@@ -26,9 +26,9 @@
                 <td>
                     @bt.WorkDate
                 </td>
-                <td>
+               @*  <td>
                     @bt.WorkType
-                </td>
+                </td> *@
                
                 <td>
                     @bt.WorkDone
